# mice

./: CMakeLists.txt  README.md
include/mice/: client.h  server.h
include/mice/data/: da.h  hashMap.h  json.h  nbt.h  position.h  sparseSet.h  string.h  stringBuilder.h  stringView.h  uuid.h  varint.h
include/mice/hash/: SHA256.h  md5.h
include/mice/io/: reader.h  writer.h
include/mice/packets/: handshake.h  login.h  packet.h  status.h
src/: client.c  client.h  main.c  server.c  server.h
src/data/: hashMap.c  json.c  nbt.c  position.c  string.c  stringView.c  uuid.c  varint.c
src/hash/: SHA256.c  md5.c
src/io/: reader.c  writer.c
src/packets/: handshake.c  login.c  packets.c  packets.h  status.c
